Closed
Bug 240767
Opened 22 years ago
Closed 22 years ago
[FIX]Crash looking at style rules matching node in a display:none iframe
Categories
(Other Applications :: DOM Inspector, defect, P1)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.7final
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
(
URL
)
Details
(Keywords: crash)
Attachments
(1 file)
|
1.52 KB,
patch
|
caillon
:
review+
bryner
:
superreview+
|
Details | Diff | Splinter Review |
The problem is lack of error-checks. To reproduce, open the URL in the URL
field in inspector, go down to the <p>, and try to view its style rules.
| Assignee | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #146332 -
Flags: superreview?(bryner)
Attachment #146332 -
Flags: review?(caillon)
| Assignee | ||
Updated•22 years ago
|
Priority: -- → P1
Summary: Crash looking at style rules matching node in a display:none iframe → [FIX]Crash looking at style rules matching node in a display:none iframe
Target Milestone: --- → mozilla1.7final
Updated•22 years ago
|
Attachment #146332 -
Flags: superreview?(bryner) → superreview+
Comment 2•22 years ago
|
||
Comment on attachment 146332 [details] [diff] [review]
Patch
r=caillon. I thought this was fixed already.
Attachment #146332 -
Flags: review?(caillon) → review+
| Assignee | ||
Comment 3•22 years ago
|
||
I think what we had fixed was nodes in display:none nodes, not nodes in document
with no presshell...
Checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 4•22 years ago
|
||
*** Bug 219514 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Product: Core → Other Applications
Updated•19 years ago
|
QA Contact: timeless → dom-inspector
You need to log in
before you can comment on or make changes to this bug.
Description
•