Don't crash if we're asked for the style rules for a node in a document with no presentation at all.  Bug 240767, r=caillon, sr=bryner.